Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Sat Oct 26 20:38:26 EEST 2002 Harry Kalogirou <harkal@gmx.net>
        
        * Removed panic from sys_socket() when unsupported protocol
          is requested.
        * Fixed inet_create() to fail if there is no ktcp running.

Sat Oct 26 12:59:19 EEST 2002 Harry Kalogirou <harkal@gmx.net>

	* Signal check when returing from a task switch, so that
	  processes that don't make system calls can get signals.
	* Fixed scheduler not to task switch to the idle task then
	  there are other processes running. As a result now we have
	  much less task switches.

Fri Oct 25 16:58:14 EEST 2002 Harry Kalogirou <harkal@gmx.net>

	* Removed all the OLD_SCHED code
	* Fixed add_timer() in sched.c to always re-enable interrupts

Wed Oct 23 10:20:10 EEST 2202	Harry Kalogirou <harkal@gmx.net>

	* Applied fix for the assembly checksum routine in ip.c.
	  Bug found and solved by Jay Barr.

===============================================================================

Sat Aug 10 23:40:20 EEST 2002	Harry Kalogirou <harkal@gmx.net>

	* This is ELKS 0.1.1

Fri Aug  9 19:51:39 BST 2002	Riley Williams <Riley@Williams.Name>

	* Reformatted Documentation/Configure.help to hopefully ensure
	  that all help text fits within the correct margins.
	* Also converted a few comments from Germanish spellings to
	  standard British English spellings in the process.

-------------------------------------------------------------------------------

Tue Jul 30 01:30:23 EEST 2002	Harry Kalogirou <harkal@gmx.net>

	* Added optimized assembly version of the checksum functions